Removed unnecessary headings from final HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>Bootstrap v5.0 Styled Browse Button</h1>
-<h4>Styled file browse button using Bootstrap v5.0 and Alpine.js</h4>
+<h1>Pet Classifier</h1>
+<h4>Classify Dog and Cat breeds with 93% Accuracy. Trained using VGG16 ConvNet.</h4>
 <div class="container">
   <div class="form-group" x-data="{ fileName: '' }">
     <div class="input-group shadow">
